[gd_scene load_steps=6 format=2]

[ext_resource path="res://engine_sfx_sounds/engine1.wav" type="AudioStream" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]
[ext_resource path="res://spaceshooter/Bonus/sfx_laser2.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 22.5475, 21.5326 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31.8134, 29.673 )

[node name="EnemyTemplate" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 8
collision_mask = 4
script = ExtResource( 2 )

[node name="EnemyShip" type="Sprite" parent="."]
modulate = Color( 1.1, 1.2, 1.1, 1 )
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 16

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="Positions" type="Node2D" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -6.012

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
autoplay = true
max_distance = 550.0
attenuation = 2.54912

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
